# agentic-vision

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  POLISH.md  README.md  SECURITY.md  START.md  TASKS.md  TEST-AGENT-V3.md  gateway-test-report.json  plug-test-report.json  test-report-v3.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
clients/python/: README.md  pyproject.toml
clients/python/cortex_client/: __init__.py  autostart.py  connection.py  errors.py  sitemap.py
clients/python/tests/: test_sitemap.py
clients/typescript/: README.md  package.json
crates/agentic-vision/: Cargo.toml  README.md
crates/agentic-vision-mcp/: Cargo.toml  README.md
docs/: 06-no-browser-revolution.md  LIMITATIONS.md  TEST-REPORT-V3.md  TEST-REPORT.md  api-reference.md  quickstart.md
docs/guides/: environments.md  framework-integration.md  interactive-sessions.md  quickstart.md  writing-extractors.md
examples/: 01_quickstart.py  02_price_comparison.py  03_pathfinding.py  04_cross_site_comparison.py  05_perceive_page.py  06_langchain_agent.py  07_crewai_researcher.py  08_autogen_agent.py  09_semantic_kernel.py  10_mcp_server_demo.py  11_runtime_status.py  README.md
integrations/: openapi.yaml
planning-docs/: 01-vision.md  03-implementation.md  04-open-source.md  TASKS.md  bootstrap.sh  settings.json
publication/: cortex-paper.tex
runtime/: Cargo.toml
scripts/: bootstrap.sh  check-canonical-sister.sh  check-install-commands.sh  claude-session.sh  install.sh
(+81 files in other folders)
