[project]
name = "cortex-client"
version = "0.1.0"
description = "Thin client for the Cortex web cartography runtime"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
